# roster

./: .env  Cargo.toml  Makefile  README.md  config.yaml  t.json
src/: config.rs  db.rs  error.rs  main.rs  response.rs  route.rs  state.rs
src/roster/: mod.rs  model.rs  repository.rs
src/roster/handlers/: list.rs
src/users/: mod.rs  model.rs  repository.rs
src/users/handlers/: create.rs  list.rs
