[package]
name = "roster"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros", "uuid", "chrono"] }

# Documentation (Swagger/OpenAPI)
utoipa = { version = "4.2", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"

# Utils
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
bb8 = "0.9.1"
bb8-redis = "0.26.0"
redis = "1.0.1"
async-trait = "0.1.89"
